-------------------
Version: 4.11
Date: 2009-??-??

Added 

  - linear kernels for svm, rvm and Gaussian processes
  - rlm from MASS
  - a set of functions (class "classDist") to computes the class 
    centroids and covariance matrix for a training set for 
    determining Mahalanobis distances of samples to each class 
    centroid 
  - a set of functions (rfe) for doing recursive feature selection 
    (aka backwards selection). A new vignette was added for more 
    details

-------------------
Version: 4.10
Date: 2009-03-20

Added OneR and PART from RWeka

-------------------
Version: 4.09
Date: 2009-03-20

- Fixed error in documentation for confusionMatrix:

  old:     Detection Prevalence = \frac{A}{A+B}
  correct: Detection Prevalence = \frac{A+B}{A+B+C+D}

  The underlying code was correct.

- Added lars (fraction and step as parameters)

-------------------
Version: 4.08
Date: 2009-02-18

Updated train and bagEarth to allow earth for classification models

-------------------
Version: 4.07
Date: 2009-01-25

Added glmnet models

-------------------
Version: 4.06
Date: 2009-01-24

Added code for sparse PLS classification.

Fix a bug in prediction for caTools::LogitBoost

-------------------
Version: 4.05
Date: 2009-01-23

Updated again for more stringent R CMD check tests in R-devel 2.9

-------------------
Version: 4.04
Date: 2009-01-22

Updated for more stringent R CMD check tests in R-devel 2.9

-------------------
Version: 4.03
Date: 2009-01-20

Significant internal changes were made to how the models are fit. Now, the 
function used to compute the models is passed in as a parameter (defaulting to 
lapply). In this way, users can use their own parallel processing software 
without new versions of caret. Examples are given in ?train.

Also, fixed a bug where the MSE (instead of RMSE) was reported for 
random forest OOB resampling

There are more examples in ?train.

Changes to confusionMatrix, sensitivity, specificity and the 