@@ -6,6 +6,7 @@ Added
 
   - linear kernels for svm, rvm and Gaussian processes
   - rlm from MASS
+  - a knn regression model, knnreg
   - a set of functions (class "classDist") to computes the class 
     centroids and covariance matrix for a training set for 
     determining Mahalanobis distances of samples to each class 
